crates/bevy_ecs/compile_fail/tests/ui/query_exact_sized_iterator_safety.stderr
error[E0277]: `bevy_ecs::query::Changed<Foo>` is not a valid `Query` filter based on archetype information
  --> tests/ui/query_exact_sized_iterator_safety.rs:7:28
   |
7  |     is_exact_size_iterator(query.iter());
   |     ---------------------- ^^^^^^^^^^^^ invalid `Query` filter
   |     |
   |     required by a bound introduced by this call
   |
   = help: the trait `ArchetypeFilter` is not implemented for `bevy_ecs::query::Changed<Foo>`
   = note: an `ArchetypeFilter` typically uses a combination of `With<T>` and `Without<T>` statements
   = help: the following other types implement trait `ArchetypeFilter`:
             ()
             (F,)
             (F0, F1)
             (F0, F1, F2)
             (F0, F1, F2, F3)
             (F0, F1, F2, F3, F4)
             (F0, F1, F2, F3, F4, F5)
             (F0, F1, F2, F3, F4, F5, F6)
           and 26 others
   = note: required for `QueryIter<'_, '_, &Foo, bevy_ecs::query::Changed<Foo>>` to implement `ExactSizeIterator`
note: required by a bound in `is_exact_size_iterator`
  --> tests/ui/query_exact_sized_iterator_safety.rs:16:30
   |
16 | fn is_exact_size_iterator<T: ExactSizeIterator>(_iter: T) {}
   |                              ^^^^^^^^^^^^^^^^^ required by this bound in `is_exact_size_iterator`

error[E0277]: `bevy_ecs::query::Added<Foo>` is not a valid `Query` filter based on archetype information
  --> tests/ui/query_exact_sized_iterator_safety.rs:12:28
   |
12 |     is_exact_size_iterator(query.iter());
   |     ---------------------- ^^^^^^^^^^^^ invalid `Query` filter
   |     |
   |     required by a bound introduced by this call
   |
   = help: the trait `ArchetypeFilter` is not implemented for `bevy_ecs::query::Added<Foo>`
   = note: an `ArchetypeFilter` typically uses a combination of `With<T>` and `Without<T>` statements
   = help: the following other types implement trait `ArchetypeFilter`:
             ()
             (F,)
             (F0, F1)
             (F0, F1, F2)
             (F0, F1, F2, F3)
             (F0, F1, F2, F3, F4)
             (F0, F1, F2, F3, F4, F5)
             (F0, F1, F2, F3, F4, F5, F6)
           and 26 others
   = note: required for `QueryIter<'_, '_, &Foo, bevy_ecs::query::Added<Foo>>` to implement `ExactSizeIterator`
note: required by a bound in `is_exact_size_iterator`
  --> tests/ui/query_exact_sized_iterator_safety.rs:16:30
   |
16 | fn is_exact_size_iterator<T: ExactSizeIterator>(_iter: T) {}
   |                              ^^^^^^^^^^^^^^^^^ required by this bound in `is_exact_size_iterator`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
